--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link href="main.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-                <div class="box d">© Pet Rescue Alliance <span class="slash">/</span>000.000.0000<span class="slash">/</span>000 Main Street, Champaign, IL 00000 <span class="slash">/</span><a href="#">email@petrescuealliance.org</a>
+                <div class="box d footer">© anndesign<span class="slash">/</span>000.000.0000<span class="slash">/</span><a href="library/index.html">Course Library</a><span class="slash">/</span><a href="#">email@petrescuealliance.org</a>
                 </div>
         <div class="margins">
             <div class="wrapper">
-                <div class="box a"><h4>/anndesign.</h4></div>
-                <div class="menu">
+                <div class="box a header"><h4>/anndesign.</h4></div>
+                <div class="menu header">
                     <ul>
                         <li class="active"><a href="index.html">home</a></li>
                         <li class="nav"><a href="about.html">work</a></li>
@@ -20,12 +20,8 @@
                     </ul>
                 </div>
                 <div class="box c">
-                    <div class="box e">
-                        <div class="box f">
-                            <h1>Ann Bailey (me)</h1>
-                            <p>i like grapefruit</p>
-                        </div>
-                    </div>
+                    <h1>Ann Bailey (Me)</h1>
+                    <p>i design things, i edit videos and i like grapefruit</p>
                 </div>
             </div>
         </div>
