--- a/works.html
+++ b/works.html
@@ -1,29 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>ur@anndesign.me</title>
         <link href="main.css" rel="stylesheet" type="text/css">
+        <title>ur@anndesign.me</title>
     </head>
     <body>
                 <div class="box d footer">© anndesign<span class="slash">/</span>000.000.0000<span class="slash">/</span><a href="library/index.html">Course Library</a><span class="slash">/</span><a href="#">aiyandi.07@gmail.com</a>
                 </div>
         <div class="margins">
-            <div class="wrapper">
+            <div class="wrapper_work">
                 <div class="box a header"><h4>/anndesign.</h4></div>
                 <div class="menu header">
                     <ul>
-                        <li class="active"><a href="index.html">home</a></li>
-                        <li class="nav"><a href="about.html">work</a></li>
+                        <li class="nav"><a href="index.html">home</a></li>
+                        <li class="active"><a href="about.html">work</a></li>
                         <li class="nav"><a href="dogs.html">about</a></li>
                         <li class="nav"><a href="volunteer.html">inspiration</a></li>
                         <li class="nav"><a href="contact.html">contact</a></li>
                     </ul>
                 </div>
-                <div class="box c">
-                    <h1>Ann Bailey (Me)</h1>
-                    <p>i design things, i edit videos and i like grapefruit</p>
+                <div class="content">
+                    <div class="grid-container">
+                        <div class="grid-item img1"><a href="images/prideandpred.pdf"><span></span></a></div>
+                        <div class="grid-item img2"><a href="images/EndEnd%20Project.pdf"><span></span></a></div>
+                        <div class="grid-item img3"><a href="images/#"><span></span></a></div>
+                        <div class="grid-item img4"><a href="images/#"><span></span></a></div>
+                    </div>
                 </div>
             </div>
         </div>
     </body>
-</html>
+</html> 
