--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!doctype html>
 <html>
     <head>
-        <title>ur@anndesign.me</title>
         <link href="main.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <title>ur@anndesign</title>
     </head>
-    <body>
-                <div class="box d footer">© anndesign<span class="slash">/</span>000.000.0000<span class="slash">/</span><a href="library/index.html">Course Library</a><span class="slash">/</span><a href="#">aiyandi.07@gmail.com</a>
+    <body class="body1">
+                <div class="box d"><p1>© anndesign</p1><span class="slash">/</span><p1>000.000.0000</p1><span class="slash">/</span><a href="library/index.html"><p1>Course Library</p1></a><span class="slash">/</span><a href="mailto:aiyandi.07@gmail.com"><p1>Email</p1></a>
                 </div>
         <div class="margins">
             <div class="wrapper">
                 <div class="box a header"><h4>/anndesign.</h4></div>
                 <div class="menu header">
                     <ul>
-                        <li class="active"><a href="index.html">home</a></li>
-                        <li class="nav"><a href="work.html">work</a></li>
-                        <li class="nav"><a href="dogs.html">about</a></li>
-                        <li class="nav"><a href="volunteer.html">inspiration</a></li>
-                        <li class="nav"><a href="contact.html">contact</a></li>
+                        <li class="active"><a href="index.html"><p1>home</p1></a></li>
+                        <li class="nav"><a href="work.html"><p1>work</p1></a></li>
+                        <li class="nav"><a href="about.html"><p1>about</p1></a></li>
+                        <li class="nav"><a href="inspiration.html"><p1>inspiration</p1></a></li>
+                        <li class="nav"><a href="contact.html"><p1>contact</p1></a></li>
                     </ul>
                 </div>
                 <div class="box c">
