--- a/work.html
+++ b/work.html
@@ -2,31 +2,31 @@
 <html>
     <head>
         <link href="main.css" rel="stylesheet" type="text/css">
-        <title>ur@anndesign.me</title>
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <title>ur@anndesign</title>
     </head>
-    <body>
-                <div class="box d footer">© anndesign<span class="slash">/</span>000.000.0000<span class="slash">/</span><a href="library/index.html">Course Library</a><span class="slash">/</span><a href="#">aiyandi.07@gmail.com</a>
-                </div>
+    <body class="body2">
         <div class="margins">
-            <div class="wrapper_work">
+                <div class="d_work"><p1>© anndesign</p1><span class="slash">/</span><p1>000.000.0000</p1><span class="slash">/</span><a href="library/index.html"><p1>Course Library</p1></a><span class="slash">/</span><a href="mailto:aiyandi.07@gmail.com"><p1>Email</p1></a>
+                </div>
+            <div class="wrapper">
                 <div class="box a header"><h4>/anndesign.</h4></div>
                 <div class="menu header">
                     <ul>
-                        <li class="nav"><a href="index.html">home</a></li>
-                        <li class="active"><a href="about.html">work</a></li>
-                        <li class="nav"><a href="dogs.html">about</a></li>
-                        <li class="nav"><a href="volunteer.html">inspiration</a></li>
-                        <li class="nav"><a href="contact.html">contact</a></li>
+                        <li class="nav"><a href="index.html"><p1>home</p1></a></li>
+                        <li class="active"><a href="work.html"><p1>work</p1></a></li>
+                        <li class="nav"><a href="about.html"><p1>about</p1></a></li>
+                        <li class="nav"><a href="inspiration.html"><p1>inspiration</p1></a></li>
+                        <li class="nav"><a href="contact.html"><p1>contact</p1></a></li>
                     </ul>
                 </div>
-                <div class="content">
-                    <div class="grid-container">
-                        <div class="grid-item img1"><a href="images/prideandpred.pdf"><span></span></a></div>
-                        <div class="grid-item img2"><a href="images/EndEnd%20Project.pdf"><span></span></a></div>
-                        <div class="grid-item img3"><a href="images/#"><span></span></a></div>
-                        <div class="grid-item img4"><a href="images/#"><span></span></a></div>
-                    </div>
-                </div>
+            </div>
+            <div class="grid-container">
+                <a href="pdf/prideandpred.pdf" title="img1" class="img1">pride</a>
+                <a href="pdf/EndEnd%20Project.pdf" title="img2" class="img2">end</a>
+                <a href="pdf/semifinaldraft.pdf" title="img3" class="img3">p3</a>
+                <a href="#" title="img4" class="img4"></a>
             </div>
         </div>
     </body>
