--- a/works.html
+++ b/works.html
@@ -23,8 +23,8 @@
                     <div class="grid-container">
                         <div class="grid-item img1"><a href="images/prideandpred.pdf"><span></span></a></div>
                         <div class="grid-item img2"><a href="images/EndEnd%20Project.pdf"><span></span></a></div>
-                        <div class="grid-item img3"><a href="images/#"><span></span></a></div>
-                        <div class="grid-item img4"><a href="images/#"><span></span></a></div>
+                        <div class="grid-item img3"><a href="images/semifinaldraft"><span></span></a></div>
+                        <div class="grid-item img4"><a href="images/fragmentation"><span></span></a></div>
                     </div>
                 </div>
             </div>
