--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
                 <a href="pdf/prideandpred.pdf" title="img1" class="img1">pride</a>
                 <a href="pdf/EndEnd%20Project.pdf" title="img2" class="img2">end</a>
                 <a href="pdf/semifinaldraft.pdf" title="img3" class="img3">p3</a>
-                <a href="pdf/semifinaldraft.pdf" title="img4" class="img4"></a>
+                <a href="pdf/fragmentation.pdf" title="img4" class="img4"></a>
             </div>
         </div>
     </body>
